--- a/src/App.scss
+++ b/src/App.scss
@@ -1,54 +1,78 @@
-$yellowDark:#383520;
-$yellowLight:#AEA14E;
-$yellowLighter:#FCE96D;
+$yellowDark: #383520;
+$yellowLight: #aea14e;
+$yellowLighter: #fce96d;
 $blackDark: #111111;
-$greyLight: #e5e5e5;
+$greyText: #e5e5e5;
 
 //minus the App height to get the music Controls
 .App {
-    height: calc(100vh - 90px);
-    background: $yellowLighter;
-  }
+  height: calc(100vh - 90px);
+  background: $yellowLighter;
+}
 //200px on the Desttop padding from above and aside
-.navBar{
-    width: 200px;
-    height: 100%;
-    background: $blackDark;
-    .logo{
-        padding: 1.5rem 1.5rem;
-        svg{
-            max-width: 130px;
-            p{
-
-            }
-        }
+.navBar {
+  width: 130px;
+  height: calc(100% - 10px);
+  background: $blackDark;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  .logo {
+    padding: 1.0rem 0.8rem;
+    svg {
+      max-width: 100px;
+      p {
+        text-align: center;
+      }
     }
-} 
-
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    li {
+      color: $greyText;
+      list-style-type: none;
+      border-radius: 5px;
+      padding: 0.7rem;
+      font-size: 0.9rem;
+      cursor: pointer;
+      transition: all 0.3s ease-out;
+      &.active{
+          background: $yellowDark;
+      }
+      &:hover{
+          color: $yellowLighter;
+      }
+    }
+  }
+  .cookies{
+      font-size: 0.5rem;
+      color: $yellowLight;
+      text-align: center;
+      margin-top: auto;
+      padding: 1rem;
+      span{
+          display: block;
+      }
+  }
+}
 
 //Is the child container on the App container
-  .outerWrap{
-    background: $blackDark;
-    height: 100vh;
-    min-height: 100%;
+.outerWrap {
+  background: $blackDark;
+  height: 100vh;
+  min-height: 100%;
 }
 
-.musicControler{
-    background: $blackDark;
-    text-align: center;
-    height: 90px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
+.musicControler {
+  background: $blackDark;
+  text-align: center;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  z-index: 2;
+    position: relative;
 }
 
-.nav_logo {
-    position: fixed;
-    top: 10;
-    left: 0;
-    width: 80px;
-    object-fit: contain;
-    padding-left: 20px;
-    cursor: pointer;
-  }
