--- a/src/App.scss
+++ b/src/App.scss
@@ -90,10 +90,37 @@ $greyNav: #e5e5e5;
 
 .main {
   width: 100%;
-  .mainContent{
+  .mainContent {
     padding: 0.5rem 1.5rem;
-    h1{
+    h1 {
       font-size: 1.5rem;
+    }
+  }
+}
+
+.cardsWrap {
+  .card {
+    background: $greyNav;
+    border-radius: 10px;
+    width: 150px;
+    overflow: hidden;
+    padding: 1.2rem;
+    box-shadow: 5px 10px 8px #888888;
+    .cardImage {
+      height: 160px;
+      box-shadow: 5px 10px 8px #888888;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .cardContent {
+      padding: 0.4rem 0;
+      h3 {
+        font-weight: 600;
+        font-size: 0.9rem;
+      }
     }
   }
 }
