--- a/src/App.scss
+++ b/src/App.scss
@@ -5,10 +5,9 @@ $blackDark: #111111;
 $greyText: #e5e5e5;
 $greyNav: #e5e5e5;
 
-
-* {
-  box-sizing: border-box;
-}
+// * {
+//   box-sizing: border-box;
+// }
 //minus the App height to get the music Controls
 .App {
   height: calc(100vh - 90px);
@@ -106,17 +105,20 @@ $greyNav: #e5e5e5;
   .card {
     background: $greyNav;
     border-radius: 10px;
-    width: 180px;
+    width: 160px;
     overflow: hidden;
     padding: 1.2rem;
     box-shadow: 5px 10px 8px #888888;
     .cardImage {
       height: 160px;
       box-shadow: 5px 10px 8px #888888;
+
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        // float: left;
+        // transform: rotate(-12deg);
       }
     }
     .cardContent {
